Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18151

Adjusting Caret width doesn't take any effect in editbox objects

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS, Wine
    • None

    Description

      Adjusting caret width in Accessibility dialog Display page, doesn't take any effect in editbox objects, nor this value is preserved.

      Attachments

        1. 0001-CaretWidth.patch
          2 kB
        2. CaretWidth.png
          CaretWidth.png
          46 kB
        3. TextBox.png
          TextBox.png
          30 kB

        Issue Links

          Activity

            People

              zecarlos1957 zecarlos1957
              zecarlos1957 zecarlos1957
              Votes:
              2 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: